Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  2016-04-07T13:37:59.644Z

CHANGELOG
=================================================

= 2.0.0 =
-------------------------------------------------
* Overall optimisation through whole new codebase.
* Added 'Focus' course view mode where modules will be viewed individually.
* Added per course completion certificate option.
* Added course completion pages (pre-completion, successful completion, failed).
* Added course notification when the course starts.
* Added unit notification when a unit opens.
* Added instructor feedback notification.
* Added course facilitators.
* Added course import/exports.
* Added overview reports download option.
* Added enhanced units settings
* Added quiz, form, selectable, and discussion modules.
* Improved assessments page.
* Improved discussion management.
* Improved course/students lists.
* Removed section break module.
* Delete certificate when deleting student.

-------------------------------------------------


= 1.2.5.8 =
-------------------------------------------------
* Fixed issues with WooCommerce sale price
* Added check for course category specific templates (i.e. archive-course-categoryslug.php)

= 1.2.5.7 =
-------------------------------------------------
* Fixed fatal error with single site setups

= 1.2.5.6 =
-------------------------------------------------
* Fixed redirection issue with multisite installations.

= 1.2.5.5 =
-------------------------------------------------
* Fixed issues with assessment, students and instructors tables being empty after WordPress 4.2 update.
* Fixed error message when submitting mandatory quiz items.
* Fixed error on setting a course category when first created.
* Fixed HTML showing on discussion page.
* Fixed Instructor capabilities not always saving.
* Improved handling of Virtual Pages and Custom Pages for CoursePress settings.

= 1.2.5.4 =