@@ -5,6 +5,10 @@ Build Time:  2016-04-07T13:37:59.644Z
 CHANGELOG
 =================================================
 
+= 2.x.x =
+-------------------------------------------------
+* Added course discussion notification.
+
 = 2.0.0 =
 -------------------------------------------------
 * Overall optimisation through whole new codebase.
